[package]
name = "commando"
description = "Universal Interface Provider for X11"
version = "1.0.0"
repository = "https://github.com/antonyblakey/commando"
authors = ["Antony Blakey <antony.blakey@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = []
categories = ["command-line-utilities", "command-line-interface"]
edition = "2018"

[dependencies]
log = "^0.4.6"
env_logger = "^0.6.1"
structopt = "^0.2.15"
clap-verbosity-flag = "^0.2.0"
itertools = "^0.8"
crossbeam = "^0.7.1"
lazy_static = "^1.3"
pangocairo = "^0.7.0"
pango = "^0.6.0"
cairo-rs = { version = "^0.6.0", features = ["xcb"] }
cairo-sys-rs = { version = "^0.8.0", features = ["xcb"] }
x11 = { version = "^2.18.1", features = ["xlib"] }
xkbcommon = { version = "^0.4", features = ["x11"] }
xcb = "^0.8.2"
xcb-util = { version = "^0.2", features = ["keysyms"] }

[profile.release]
lto = true
